corrected wrapping

--- a/style.scss
+++ b/style.scss
@@ -85,7 +85,7 @@ td {
 }
 
 .column-title th {
-  $primary-color-space: nowrap;
+  white-space: nowrap;
   background-color: $secondary-bg-color;
 }
 
